test/conformance/chainsaw/mutating-policies/reporting/admission/configmap.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-cm-1
  namespace: isolated-ns
data:
  key1: value1
