test/conformance/chainsaw/mutating-policies/reporting/admission/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: isolated-ns
