test/conformance/chainsaw/mutating-policies/reporting/admission/report.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  namespace: isolated-ns
  labels:
    app.kubernetes.io/managed-by: kyverno
  ownerReferences:
  - apiVersion: v1
    kind: ConfigMap
    name: test-cm-1
results:
- message: success
  policy: test-admission-reporting-mpol
  properties:
    process: admission review
  result: pass
  scored: true
  source: KyvernoMutatingPolicy
scope:
  apiVersion: v1
  kind: ConfigMap
  name: test-cm-1
  namespace: isolated-ns
summary:
  error: 0
  fail: 0
  pass: 1
  skip: 0
  warn: 0
