test/conformance/chainsaw/mutating-policies/reporting/admission/configmap-assert.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-cm-1
  namespace: isolated-ns
  labels:
    foo: bar
data:
  key1: value1
